<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Generic -->
    <string name="no_activities"></string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_next">Next</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_quantity">Change Quantity</string>

    <!-- START -->
    <string name="app_name">Balance</string>
    <string name="start_btn_join">SIGN UP</string>
    <string name="start_btn_login">LOGIN</string>
    
    <!-- Login/ Join -->
	<string name="title_login">Welcome back!</string>
	<string name="title_join">Join us</string>
	<string name="te_username">User name</string>
	<string name="te_password">Password</string>
	<string name="btn_login">LOG IN</string>
	<string name="btn_start">SIGN UP</string>
	
	
	<!-- Profile/Person -->
	<string name="tv_stepCount1">CREATE PROFILE \nSTEP 1 OF 2</string>
	<string name="tv_profile">Tell us a bit about yourself.</string>
	<string name="btn_later">Do It Later</string>
	<string name="title_people">MANAGE PEOPLE</string>
	<string name="title_person">ADD PERSON</string>
	<string name="tv_title">Add the people that you shop for so we can keep an accurate track of your nutritional needs.</string>
	<string name="tv_name">NAME</string>
	<string name="tv_age">AGE</string>
	<string name="tv_height">HEIGHT</string>
	<string name="tv_weight">WEIGHT</string>
	<string name="tv_activity">ACTIVITY LEVEL</string>
	<string name="btn_startcart">New Cart</string>
	
	<!-- Setup People -->
	<string name="setupp_header">User Properties</string>
	<string name="setupp_prompt">How many people are you shopping for?</string>
	<string name="tv_gender_prompt">This person is a</string>
	<string name="btn_add">Add</string>
	<string name="btn_man">Man</string>
	<string name="btn_woman">Woman</string>
	<string name="btn_boy">Boy</string>
	<string name="btn_girl">Girl</string>
	<string name="btn_edit">Edit</string>
	<string name="tv_gender">GENDER</string>
	
	<!-- Setup Days -->
	<string name="tv_days_desc">How many days are you planning to shop for?</string>
	<string name="setupd_prompt">How many Days are you shopping for?</string>
	<string name="setupd_btn_start">Start Cart</string>
	
	<!-- ItemListFragment Text-->
	<string name="itemlist_header">Items in Cart</string>
	
	<!-- AddItemFragment -->
	<string name="additem_btn_scan">Scan</string>
	<string name="additem_btn_search">Search</string>
	
	<!-- SearchBarcode -->
	<string name="sb_title">Barcode Results</string>
	<string name="sb_outputtext">Results of Barcode Scan</string>
	
	<!-- SearchPLU -->
	<string name="title_sp">LOOKUP PRODUCE</string>
	<string name="tv_sp_desc">Enter the 4 or 5 digit number that you see on the produce sticker.</string>
	<string name="et_sp_hint">4-5 digit number</string>
	<string name="btn_sp_search">Search</string>
	<string name="tv_sp_prompt">Were you looking for</string>
	<string name="btn_sp_yes">Yep</string>
	<string name="btn_sp_no">Try Again</string>
	<string name="btn_sp_add">Add to Cart</string>
	<string name="tv_sp_quantity">Please enter the quantity of</string>

	
	<!-- Checkout -->
	<string name="tv_summary_title">GROCERY NUTRITION SUMMARY</string>
	<string name="btn_finish">I\'LL IMPROVE!</string>
	<string name="tv_checkout">Checkout</string>
	<string name="btn_logout">Logout</string>	
	<string name ="btn_new_cart">New Cart</string>
	<string name="tv_nexttime_title">TO IMPROVE</string>
	<string name="tv_negative_title">IMPROVEMENTS FOR NEXT TIME</string>
	<string name="tv_positive_title">THE GOOD</string>
	<string name="btn_learn">LEARN ABOUT NUTRIENTS</string>
	
	<!-- History -->
	<string name="history_nutrient_list">NUTRIENTS</string>
	
</resources>