<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/person_define"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
     <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="20dp"
                android:text="@string/tv_name" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:inputType="text" />

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/tv_age" />

                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/tv_gender" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/sp_age"
                    android:layout_width="111dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/sp_gender"
                    android:layout_width="111dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1" />
            </TableRow>
            
             <TableRow
                 android:id="@+id/tableRow2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_marginBottom="20dp"
                 android:layout_marginRight="15dp" >

                 <Button
                     android:id="@+id/btn_next"
                     style="@style/GreyButton"
                     android:layout_width="100dp"
                     android:layout_height="45dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="20dp"
                     android:layout_weight="1"
                     android:text="@string/btn_next" />
             </TableRow>

</LinearLayout>